[FIX] Configure mock server, update .env file and readme

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL_GET=https://jsonplaceholder.typicode.com/
-REACT_APP_API_URL_POST=https://jsonplaceholder.typicode.com/
+REACT_APP_API_URL_GET=https://244fc348-3839-480f-a67c-7055cf008e16.mock.pstmn.io
+REACT_APP_API_URL_POST=https://244fc348-3839-480f-a67c-7055cf008e16.mock.pstmn.io/points
