--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/node-sass": "^4.11.1",
     "@types/react-dom": "^16.9.0",
     "d3": "^5.16.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "7.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
